syntax = "proto3";
package OmniFlix.itc.v1;

import "gogoproto/gogo.proto";
import "OmniFlix/itc/v1/params.proto";
import "OmniFlix/itc/v1/itc.proto";

option go_package = "github.com/OmniFlix/omniflixhub/v5/x/itc/types";

// GenesisState defines the itc module's genesis state.
message GenesisState {
  repeated Campaign    campaigns = 1 [(gogoproto.nullable) = false];
  uint64               next_campaign_number = 2;
  repeated Claim       claims = 3 [(gogoproto.nullable) = false];
  Params               params = 4 [(gogoproto.nullable) = false];
}